6 lab + testy zrobione